@@ -2,9 +2,11 @@ NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
 V1.00
+- NEW : Create output via template files, more flexible
 - NEW : Extended role system. Each gallery has now a author
 - Changed : Convert tags to WP-Taxonomy tables, no more need for ngg_tags, ngg_pic2tags
 - Changed : Arrange fields in a new way
+- Bugfix : Check for zero in Exif Focal Length
 - Removed : Revert singlepic wrapper, breaks validation
 - Removed : Do not longer check for myGallery folders
 - Removed : Use now PclZip from WP Core
